--- a/Modulation_Classification.ipynb
+++ b/Modulation_Classification.ipynb
@@ -6,7 +6,7 @@
       "name": "Modulation Classification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNvm44zNcH6sWH6ga3kRv9P",
+      "authorship_tag": "ABX9TyNxxyHHxSTotRGcI3Rugubs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,7 +69,7 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -79,13 +79,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e2a4eeb2-8150-4a7b-fbaa-42b0a3851b52"
+        "outputId": "5d8f60ef-6b1e-40a3-d8a5-efaa49dfec2d"
       },
       "source": [
         "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
         "print(device)"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,7 +107,7 @@
         "np.random.seed(seed)\n",
         "torch.manual_seed(seed);"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -126,14 +126,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2c6a62a2-e559-4bd9-fd81-e3391441e970"
+        "outputId": "5bce4b54-748b-4330-ab8b-8b5ff2780e9d"
       },
       "source": [
+        "\n",
         "# Load the dataset ...\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,7 +155,7 @@
         "open_file = open(filename,'rb')\n",
         "Xd = cPickle.load(open_file, encoding='latin1')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -164,7 +165,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "29ed0cd8-4038-4048-d5b0-86ed69ba772b"
+        "outputId": "a67a54e3-102f-4195-824c-ad91909c0b67"
       },
       "source": [
         "snrs,mods = map(lambda j: sorted(list(set(map(lambda x: x[j], Xd.keys())))), [1,0])\n",
@@ -177,7 +178,7 @@
         "X = np.vstack(X)\n",
         "print(X.shape)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -203,7 +204,7 @@
         "X_train = X[train_idx]\n",
         "X_test =  X[test_idx]"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -218,7 +219,7 @@
       "source": [
         "print(X_train.shape, X_test.shape)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,7 +242,7 @@
       "source": [
         "print('modulation labels: {}'.format(mods))"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +263,7 @@
         "train_labels = np.array(list(map(lambda x: mods.index(lbl[x][0]), train_idx)), dtype=int)\n",
         "test_labels  = np.array(list(map(lambda x: mods.index(lbl[x][0]), test_idx)), dtype=int)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -277,7 +278,7 @@
       "source": [
         "print(train_labels.shape, test_labels.shape)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,7 +304,7 @@
         "x_test  = np.expand_dims(X_test, axis=1)\n",
         "print(x_train.shape, x_test.shape )"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,7 +328,7 @@
         "train_dataset = TensorDataset(x_train, y_train.type(torch.LongTensor))\n",
         "test_dataset  = TensorDataset(x_test, y_test.type(torch.LongTensor))"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -340,7 +341,7 @@
         "TrainLoader = DataLoader(train_dataset, batch_size=batch_size, shuffle=False)\n",
         "TestLoader  = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -361,7 +362,7 @@
         "# Dropout rate\n",
         "dr = 0.6"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -419,7 +420,7 @@
         "          \n",
         "cnn = CovNet().to(device=device)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -434,7 +435,7 @@
       "source": [
         "summary(cnn, (1,2,128))"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -480,7 +481,7 @@
         "criterion = nn.CrossEntropyLoss()\n",
         "optimizer = optim.Adam(cnn.parameters(), lr=0.001)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -499,7 +500,7 @@
         "    \"val\": []\n",
         "}"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -519,7 +520,7 @@
         "    \n",
         "    return acc"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -682,7 +683,7 @@
         "model.load_state_dict(torch.load('saved_model.pth',map_location=device))\n",
         "model.eval()"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -741,7 +742,7 @@
         "  print(\"Accuracy {}: {:.2f}\".format(name , correct / total))\n",
         "y_pred = [y for x in y_pred_list for y in x]"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -862,9 +863,9 @@
         "    plt.tight_layout()\n",
         "    plt.ylabel('True label')\n",
         "    plt.xlabel('Predicted label')\n",
-        "    plt.savefig('cm.pdf'), plt.show();"
+        "    plt.show();"
       ],
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -882,7 +883,7 @@
         "cm = confusion_matrix(test_labels, y_pred)\n",
         "plot_confusion_matrix(cm, labels=mods)"
       ],
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -942,11 +943,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lDj31lpi9Wdq"
+      },
+      "source": [
+        "## Signal to Noise Ratio"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "QS71DPZejN47"
       },
       "source": [
+        "# Defining function for new predictions\n",
         "def make_prediction(y):\n",
         "  with torch.no_grad():\n",
         "    \n",
@@ -960,17 +971,8 @@
         "  \n",
         "  return predicted_class.cpu().numpy()"
       ],
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "lDj31lpi9Wdq"
-      },
-      "source": [
-        "## Signal to Noise Ratio"
-      ]
     },
     {
       "cell_type": "code",
@@ -1007,7 +1009,7 @@
         "    print(\"Overall Accuracy: \", cor / (cor+ncor))\n",
         "    acc[snr] = 1.0*cor/(cor+ncor)"
       ],
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1674,7 +1676,7 @@
         "plt.xlabel(\"Signal to Noise Ratio\")\n",
         "plt.ylabel(\"Classification Accuracy\");"
       ],
-      "execution_count": 173,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
